<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_person">

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.pang.smartbill.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.pang.smartbill.ui.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.pang.smartbill.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>