<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <Button
                android:id="@+id/dialog_more_btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableTop="@mipmap/it_guanyu"
                style="@style/settingStyle"
                android:textColor="@color/white"
                android:text="@string/about"/>

            <Button
                android:id="@+id/dialog_more_btn_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/it_shezhi"
                android:layout_marginTop="20dp"
                style="@style/settingStyle"
                android:text="@string/clear_records"/>

            <Button
                android:id="@+id/dialog_more_btn_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/it_jilu"
                android:layout_marginTop="20dp"

                style="@style/settingStyle"
                android:text="@string/history_record"/>

            <Button
                android:id="@+id/dialog_more_btn_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/settingStyle"
                android:drawableTop="@mipmap/it_xiqing"
                android:text="@string/account_info" />


        </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"

        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />



</RelativeLayout>